~JSch connection