@@ -9,7 +9,8 @@ import java.util.ArrayList;
 
 public class PathConstructor {
     public static void main(String[] args) throws IOException{
-        ArrayList<Path> fileClasses = PathFinderUtil.getVerbosePaths(Paths.get(PathFinderUtil.removeAsterisk("/home/grdar/Downloads/*")));
+//        ArrayList<Path> fileClasses = PathFinderUtil.getVerbosePaths(Paths.get(PathFinderUtil.removeAsterisk("/home/grdar/Downloads/*")));
+        ArrayList<Path> fileClasses = PathFinderUtil.getAllFilesInPath(Path.of("/home/grdar/Downloads/fonts/Wicons"));
 
 
         for (Path fileClass : fileClasses) System.out.println(fileClass.toString());
